compiler/tests/invalid_programs/methods/overload_intersection.jm
!TypeError

def foo(bar:Int)
  puts(bar)
end

def foo(f:Int)
  puts("foo")
  puts(f)
end

foo(12)
